--- a/index.html
+++ b/index.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>최초로 하는 깃허브 커밋!</h2>
-</body>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Yerin</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+      }
+
+      body > .list2 {
+        background-image: url(../누렁삐약.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+
+      header {
+        color: #000000;
+        padding: 20px;
+        text-align: center;
+        background-color: rgb(207, 170, 255);
+      }
+
+      .container {
+        width: 80%;
+        margin: 20px auto;
+      }
+
+      .project {
+        background-color: #fff;
+        padding: 20px;
+        margin-bottom: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .project h2 {
+        color: #333;
+      }
+
+      .project > .list3 {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 150px;
+        border-top-style: solid;
+        border-bottom-style: solid;
+        border-width: 0.1px;
+        padding: 10px;
+      }
+
+      footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px 0;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Header Start -->
+    <header>
+      <h1>Yerin's Portpolio</h1>
+
+      <ul id="main-header">
+        <a href="">login</a>
+      </ul>
+    </header>
+    <!-- Header End -->
+
+    <!-- Main Start -->
+    <main>
+      <div class="project">
+        <h2>목록</h2>
+        <p>
+          1. 자기소개 2. 프로젝트 목록 3. 학력 및 자격증 4. 기술 및 경험 5.
+          연락처
+        </p>
+      </div>
+
+      <div class="project" id="list2">
+        <h2>1. 자기소개</h2>
+        <p>
+          안녕하세요! 저는 김예린입니다. 저는 새로운 도전을 즐기며, 항상 새로운
+          기술을 배우고 성장하기 위해 노력하고 있습니다. 소프트웨어 개발에
+          열정을 가지고 있으며, 실력을 갖추어 즐겨보려 합니다. 또한, 프로젝트를
+          진행하는 동안 팀원들과의 협업을 중요하게 생각합니다. 대학원 재학 시절
+          저는 코로나라는 바이러스를 조금이라도 더 건강하게 대처할 수 있도록
+          고민한 결과 플라즈마 바이러스 클리너라는 제품을 출시하며 팀원들과의
+          소통과 협력을 통해 출시를 했던 경험이 있기에 중요하다 믿습니다. 저의
+          목표는 지속적인 성장과 발전을 거듭하여 프론트엔드 엔지니어 또는 웹
+          디자이너로 성장하는 것입니다. 이를 위해 항상 자기계발에 힘쓰고 있으며,
+          새로운 도전에 적극적으로 대응하고 있습니다. 더 많은 정보를 원하시거나
+          제안하실 내용이 있다면 언제든지 연락해주세요!
+        </p>
+      </div>
+
+      <div class="project" id="list 3">
+        <h2>정보</h2>
+        <a href=""> E-mail: yerin22333@gmail.com </a>
+        <a href="https://blog.naver.com/yerin_pure"> Blog </a>
+      </div>
+    </main>
+    <!-- Main Stop -->
+
+    <footer>
+      <p>&copy; 김예린의 포트폴리오</p>
+    </footer>
+  </body>
 </html>
