--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         background-repeat: no-repeat;
         background-position: center;
       }
-
+<!--header start -->
       header {
         color: #000000;
         padding: 20px;
